# Trabalho-EDA-26.1

./: .gitignore  CMakeLists.txt  b_plus_tree.c  b_plus_tree.h  file_manager.c  file_manager.h  hash.c  hash.h  header.c  importation.c  importation.h  importer.c  importer.h  main.c  movie.c  movie.h  person.c  relationship.c  relationship.h
include/: b_plus_tree.h  data_base_manipulation.h  data_structures_manipulation.h  file_manager.h  hash.h  hash_disk.h  hash_manipulation.h  header.h  importer.h  linked_list.h  movie.h  movie_tree.h  person.h  person_tree.h  relationship.h  resposta_questoes.h  utils.h
requirements/: Nodes.txt  Relationships.txt
src/: b_plus_tree.c  data_base_manipulation.c  data_structures_manipulation.c  file_manager.c  hash.c  hash_disk.c  hash_manipulation.c  header.c  importer.c  linked_list.c  main.c  movie.c  movie_tree.c  person.c  person_tree.c  relationship.c  resposta_questoes.c  utils.c
